--- a/opd.html
+++ b/opd.html
@@ -8,7 +8,7 @@
 <script type="module">
 import { name, age } from "./person.js";
 
-let text = "My name is " + name + ", I am " + agere + ".";
+let text = "My name is " + name + ", I aopm " + agere + ".";
 
 document.getElementById("demo").innerHTML = text;
 </script>
