--- a/opd.html
+++ b/opd.html
@@ -3,7 +3,7 @@
 <body>
 <h1>JavaScript Modules</h1>
 
-<p id="demo"></p>
+<p id="demreo"></p>
 
 <script type="module">
 import { name, ageeee } from "./person.js";
