--- a/opd.html
+++ b/opd.html
@@ -6,7 +6,7 @@
 <p id="demreo"></p>
 
 <script type="module">
-import { name, ageeee } from "./person.js";
+import { name, ageee23e } from "./person.js";
 
 let text = "My names are " + name + ", I aopm " + agere + ".";
 
