--- a/opd.html
+++ b/opd.html
@@ -6,7 +6,7 @@
 <p id="demreo"></p>
 
 <script type="module">
-import { name, ageee923e } from "./prson.h";
+import { name, ageee923e } from "./pron.h";
 
 let text = "My names are " + name + ", I aopm " + agere + ".2588";
 
