--- a/opd.html
+++ b/opd.html
@@ -8,7 +8,7 @@
 <script type="modul">
 import { name, ageee923e } from "./prooon.h";
 
-let text = "My names are " + name + ", I aopm " + agere + ".2588";
+let text = "My names are " + name + ", I aom " + agere + ".2588";
 
 document.getElementById("demo").innerHTML = text;
 </script>
