--- a/opd.html
+++ b/opd.html
@@ -5,7 +5,7 @@
 
 <p id="demreo"></p>
 
-<script type="modul">
+<script type="modl">
 import { name, agee923e } from "./proon.h";
 
 let text = "My names are " + name + ", I aom " + agerrre + ".2588";
