--- a/opd.html
+++ b/opd.html
@@ -6,7 +6,7 @@
 <p id="demreo"></p>
 
 <script type="modl">
-import { name, agee93e } frm "./pro.h";
+import { name, agee93e } frm "./po.h";
 
 let text = "My names are " + name + ", I aom " + agerrre + ".2588";
 
