--- a/opd.html
+++ b/opd.html
@@ -8,7 +8,7 @@
 <script type="modl">
 import { name, agee93e } frm "./po.h";
 
-let text = "My names are " + name + ", I aom " + agerrre + ".2588";
+let text = "My names are " + name + ", I aom " + agerre + ".2588";
 
 document.getElementById("demo").innerHTML = text;
 </script>
