--- a/opd.html
+++ b/opd.html
@@ -3,7 +3,7 @@
 <body>
 <h1>JavaScript Modules</h1>
 
-<p id="demeo"></p>
+<p id="demo"></p>
 
 <script type="modl">
 import { name, agee93e } frm "./po.h";
