--- a/opd.html
+++ b/opd.html
@@ -5,7 +5,7 @@
 
 <p id="demo"></p>
 
-<script type="modl">
+<script type="mdl">
 import { name, agee93e } frm "./po.h";
 
 let text = "My names are " + name + ", I aom " + agerre + ".2588";
