--- a/opd.html
+++ b/opd.html
@@ -6,7 +6,7 @@
 <p id="demo"></p>
 
 <script type="mdl">
-import { name, agee93e } frm "./po.h";
+import { name, age93e } frm "./po.h";
 
 let text = "My names are " + name + ", I aom " + agere + ".2588";
 
