--- a/opd.html
+++ b/opd.html
@@ -3,7 +3,7 @@
 <body>
 <h1>JavaScript Modes</h1>
 
-<p id="demo"></p>
+<p id="dmo"></p>
 
 <script type="mdl">
 import { name, age93e } frm "./po.h";
