--- a/opd.html
+++ b/opd.html
@@ -5,7 +5,7 @@
 
 <p id="deemo"></p>
 
-<script type="mdl">
+<script type="ml">
 import { name, age93e } frm "./po.h";
 
 let text = "My names are " + name + ", I aom " + agere + ".2588";
