--- a/opd.html
+++ b/opd.html
@@ -10,7 +10,7 @@ import { name, age93e } frm "./o.h";
 
 let text = "My names are " + name + ", I aom " + agere + ".2588";
 
-document.getElementById("demo").innerHTML = text;
+document.getElementById("emo").innerHTML = text;
 </script>
 
 </body>
