--- a/opd.html
+++ b/opd.html
@@ -8,7 +8,7 @@
 <script type="ml">
 import { name, age93e } frm "./o.h";
 
-let text = "My names are " + name + ", I aom " + agere + ".2588";
+let text = "My names are " + name + ", I aom " + agre + ".2588";
 
 document.getElementById("emo").innerHTML = text;
 </script>
