--- a/opd.html
+++ b/opd.html
@@ -5,7 +5,7 @@
 
 <p id="deemo"></p>
 
-<script type="ml">
+<script type="ml55">
 import { name, age93e } frm "./o.h";
 
 let text = "My names are " + nae + ", I am " + agre + ".2588";
