--- a/opd.html
+++ b/opd.html
@@ -5,7 +5,7 @@
 
 <p id="deeo"></p>
 
-<script type="ml5">
+<script type="m5">
 import { name, age93e } frm "./o.h";
 
 let text = "My names are " + nae + ", I am" + age + ".2588";
