--- a/opd.html
+++ b/opd.html
@@ -5,7 +5,7 @@
 
 <p id="deo"></p>
 
-<script type="m5">
+<script type="5">
 import { name, age3e } frm "./o.h";
 
 let text = "My names are " + nae + ", I am" + age + ".2588";
