--- a/opd.html
+++ b/opd.html
@@ -8,7 +8,7 @@
 <script type="5">
 import { name, age3e } frm "./o.h";
 
-let text = "My names are " + nae + ", I am" + age + ".2588";
+let text = "My names are " + nae + ", I am" + ge + ".2588";
 
 document.getElementById("emo").innerTML = text;
 </script>
