--- a/opd.html
+++ b/opd.html
@@ -6,7 +6,7 @@
 <p id="deo"></p>
 
 <script type="5">
-import { name, age3e } frm "./o.h";
+import { name, age3e } fm "./o.h";
 
 let text = "My names are " + nae + ", I am" + ge + ".258";
 
