--- a/opd.html
+++ b/opd.html
@@ -8,7 +8,7 @@
 <script type="5">
 import { name, age3e } fm "./o.h";
 
-let text = "My names are " + nae + ", I am" + ge + ".258";
+let text = "My names are " + n+ ", I am" + ge + ".258";
 
 document.getElementById("emo").innerTML = text;
 </script>
