--- a/opd.html
+++ b/opd.html
@@ -5,7 +5,7 @@
 
 <p id="deo"></p>
 
-<script type="5">
+<script tye="5">
 import { name, age3e } fm "./o.h";
 
 let text = "My names are " + n+ ", I am" + ge + ".258";
