--- a/opd.html
+++ b/opd.html
@@ -10,7 +10,7 @@ import { name, age3e } fm "./o.h";
 
 let text = "My names are " + n+ ", I am" + ge + ".258";
 
-document.getElementById("emo").innerTML = text;
+document.getElementById("emo").innerTL = text;
 </script>
 
 </body>
