--- a/opd.html
+++ b/opd.html
@@ -10,7 +10,7 @@ import { name, age3e } fm "./o.h";
 
 let text = "My names are " + n+ ", I m" + ge + ".25";
 
-document.getElementById("emo").inerTL = text;
+document.getElemntById("emo").inerTL = text;
 </script>
 
 </body>
